<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.altinity.ice</groupId>
  <artifactId>pom</artifactId>
  <version>0.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <!-- versions -->
    <iceberg.version>1.9.2</iceberg.version>
    <hadoop.version>3.4.1</hadoop.version>
    <parquet.version>1.15.2</parquet.version>
    <aws.java.sdk.version>2.31.13</aws.java.sdk.version>
    <picocli.version>4.7.6</picocli.version>
    <jackson.version>2.18.8</jackson.version>
    <slf4j.version>2.0.17</slf4j.version>
    <logback.version>1.5.18</logback.version>
    <prometheus.version>1.3.6</prometheus.version>
    <jetty.version>11.0.25</jetty.version>
    <jakarta.version>6.1.0</jakarta.version>
    <google.cloud.storage.version>2.60.0</google.cloud.storage.version>
    <skedule.version>0.4.0</skedule.version>
    <!-- versions:test -->
    <testng.version>7.9.0</testng.version>
    <assertj.version>3.27.7</assertj.version>
    <!-- versions:transitive -->
    <caffeine.version>3.2.0</caffeine.version>
    <jline.version>3.26.1</jline.version>
    <commons.codec.version>1.18.0</commons.codec.version>
    <httpclient5.version>5.4.3</httpclient5.version>
    <httpcore5.version>5.4.3</httpcore5.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>software.amazon.awssdk</groupId>
        <artifactId>bom</artifactId>
        <version>${aws.java.sdk.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents.client5</groupId>
        <artifactId>httpclient5</artifactId>
        <version>${httpclient5.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents.core5</groupId>
        <artifactId>httpcore5</artifactId>
        <version>${httpcore5.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents.core5</groupId>
        <artifactId>httpcore5-h2</artifactId>
        <version>${httpcore5.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>ice</module>
    <module>ice-rest-catalog</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <phase>integration-test</phase>
            <goals>
              <goal>integration-test</goal>
            </goals>
          </execution>
          <execution>
            <id>verify</id>
            <phase>verify</phase>
            <goals>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <includes>
            <include>**/*IT.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <skip>true</skip>
        </configuration>
        <inherited>false</inherited>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <archive>
            <manifestEntries>
              <!-- for class.getPackage().getImplementationVersion() -->
              <Implementation-Version>${project.version}</Implementation-Version>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.2</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.shyiko.usage-maven-plugin</groupId>
        <artifactId>usage-maven-plugin</artifactId>
        <version>1.0.0</version>
        <configuration>
          <usage>
            # build (without running tests)
            # - "./ice/target/ice-jar" (executable jar)
            # - "./ice-rest-catalog/target/ice-rest-catalog-jar" (executable jar)
            ./mvnw clean package -Dmaven.test.skip=true

            # check
            ./mvnw validate

            # format
            ./mvnw com.spotify.fmt:fmt-maven-plugin:format license:format

            # test
            ./mvnw verify

            # publish a new version
            GITHUB_TOKEN=... VERSION=0.0.0-0 .bin/release --push

            # BONUS

            # show dependency tree
            ./mvnw -pl ice-rest-catalog dependency:tree
          </usage>
        </configuration>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>com.github.shyiko.usage-maven-plugin</groupId>
        <artifactId>usage-maven-plugin</artifactId>
        <version>1.0.0</version>
      </extension>
    </extensions>
  </build>

  <profiles>
    <profile>
      <id>check</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.mycila</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <version>4.5</version>
            <configuration>
              <header>${maven.multiModuleProjectDirectory}/apache-header.txt</header>
              <properties>
                <year>2025</year>
              </properties>
              <includes>
                <include>src/main/java/**/*.java</include>
                <include>src/test/java/**/*.java</include>
              </includes>
              <excludes>
                <!-- TODO: find a better way -->
                <exclude>src/main/java/**/RESTCatalogAdapter.java</exclude>
                <exclude>src/main/java/**/RESTCatalogServlet.java</exclude>
                <exclude>src/main/java/**/RESTObjectMapper.java</exclude>
                <exclude>src/main/java/**/Route.java</exclude>
                <exclude>src/main/java/**/iceberg/io/internal/*.java</exclude>
                <exclude>src/main/java/**/iceberg/io/SchemeFileIO.java</exclude>
                <exclude>src/main/java/org/apache/iceberg/**/*.java</exclude>
              </excludes>
              <strictCheck>true</strictCheck>
            </configuration>
            <executions>
              <execution>
                <id>check-license</id>
                <phase>validate</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>3.5.0</version>
            <executions>
              <execution>
                <id>enforce</id>
                <configuration>
                  <rules>
                    <dependencyConvergence/>
                  </rules>
                </configuration>
                <goals>
                  <goal>enforce</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>com.spotify.fmt</groupId>
            <artifactId>fmt-maven-plugin</artifactId>
            <version>2.25</version>
            <executions>
              <execution>
                <phase>validate</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.ec4j.maven</groupId>
            <artifactId>editorconfig-maven-plugin</artifactId>
            <version>0.1.3</version>
            <executions>
              <execution>
                <id>check</id>
                <phase>validate</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <includes>
                <include>*.xml</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>no-check</id>
      <activation>
        <property>
          <name>no-check</name>
        </property>
      </activation>
    </profile>
  </profiles>
</project>
